--- a/plugins/obs-ffmpeg/data/locale/pt-PT.ini
+++ b/plugins/obs-ffmpeg/data/locale/pt-PT.ini
@@ -50,6 +50,7 @@ MediaFileFilter.AllFiles="Todos os ficheiros"
 
 ReplayBuffer="Buffer de Repetição"
 ReplayBuffer.Save="Salvar Repetição"
+ReplayBuffer.Save.seconds="Guardar os últimos %1 segundos do Replay Buffer"
 
 HelperProcessFailed="Não foi possível iniciar o processo auxiliar de gravação. Verifique se os ficheiros do OBS não bloqueados ou removidos por qualquer software de segurança ou antivírus de terceiros."
 UnableToWritePath="Não foi possível gravar em %1. Certifique-se de que está a usar um caminho de gravação no qual sua conta de utilizador tem permissão para escrever e que há espaço suficiente em disco."
